--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -107,10 +107,10 @@
                 <label>Staff Role</label>
                 <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}" required>
                     <option value="" disabled selected>Select Role</option>
-                    <option value="LECTURER">LECTURER</option>
-                    <option value="DEAN">DEAN</option>
-                    <option value="HOP">(HOP) HEAD OF PROGRAM</option>
-                    <option value="ADMIN">ADMIN</option>
+                    <option value="1">LECTURER</option>
+                    <option value="2">DEAN</option>
+                    <option value="3">(HOP) HEAD OF PROGRAM</option>
+                    <option value="4">ADMIN</option>
                 </select><br>
 
                 <label id="departmentLabel">Department</label>
