--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -15,6 +15,10 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
+                <div class="dashboard-frame pie">
+                    <h3>Course by Department</h3>
+                    <canvas id="courseDeptPieChart" width="200" height="200"></canvas>
+                </div>
                 <div class="dashboard-frame">
                     <h3>Total Courses</h3>
                     <p class="dashboard-text">{{ total_courses }}</p>
@@ -30,10 +34,6 @@
                 <div class="dashboard-frame">
                     <h3>Incompleted Data Rows</h3>
                     <p class="dashboard-text" style="color:red;">{{ error_rows }}</p>
-                </div>
-                <div class="dashboard-frame">
-                    <h3>Course by Department</h3>
-                    <canvas id="courseDeptPieChart" width="200" height="200"></canvas>
                 </div>
             </div>
         </div>
