--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -378,10 +378,15 @@ input, select{
 
 .dashboard-row {
     display: flex; 
+    grid-template-columns: 1fr 1fr 1fr; /* pie | box | box */   
     gap: 20px; 
     margin-bottom: 20px;
 }
 
+/* Make the pie chart span two rows */
+.dashboard-frame.pie {
+    grid-row: span 2;
+}
 
 
 
