--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -378,7 +378,7 @@ input, select{
 
 .dashboard-row {
     display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; /* 3 columns */
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* 4 columns */
     gap: 20px; 
     margin-bottom: 20px;
 }
