--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -15,7 +15,7 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Venues by Floor</h3>
                     <canvas id="venueFloorPieChart" width="200" height="200"></canvas>
                 </div>
