--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -15,15 +15,15 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Staff Distribution</h3>
                     <canvas id="staffPieChart" width="200" height="200"></canvas>
                 </div>
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Gender Distribution</h3>
                     <canvas id="genderPieChart" width="200" height="200"></canvas>
                 </div>
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Account Status</h3>
                     <canvas id="statusPieChart" width="200" height="200"></canvas>
                 </div>
