--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -21,23 +21,23 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Monday Timetable</h3>
-                    <p class="dashboard-text">{{ monday_timetable }}</p>
+                    <p class="dashboard-text">{{ mon_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Tuesday Timetable</h3>
-                    <p class="dashboard-text">{{ tuesday_timetable }}</p>
+                    <p class="dashboard-text">{{ tue_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Wednesday Timetable</h3>
-                    <p class="dashboard-text">{{ wednesday_timetable }}</p>
+                    <p class="dashboard-text">{{ wed_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Thursday Timetable</h3>
-                    <p class="dashboard-text">{{ thursday_timetable }}</p>
+                    <p class="dashboard-text">{{ thu_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Friday Timetable</h3>
-                    <p class="dashboard-text">{{ friday_timetable }}</p>
+                    <p class="dashboard-text">{{ fri_timetable }}</p>
                 </div>
             </div>  
         </div>
