--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -16,30 +16,30 @@
             <!-- Overview -->
             <div class="dashboard-row">
                 <div class="dashboard-frame">
-                    <h3>Total Timetable</h3>
+                    <h3>Total Timetable Sets</h3>
                     <p class="dashboard-text">{{ total_timetable }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Monday Timetable</h3>
+                    <h3>Monday Scheduled Classes</h3>
                     <p class="dashboard-text">{{ mon_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Tuesday Timetable</h3>
+                    <h3>Tuesday Scheduled Classes</h3>
                     <p class="dashboard-text">{{ tue_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Wednesday Timetable</h3>
+                    <h3>Wednesday Scheduled Classes</h3>
                     <p class="dashboard-text">{{ wed_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Thursday Timetable</h3>
+                    <h3>Thursday Scheduled Classes</h3>
                     <p class="dashboard-text">{{ thu_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Friday Timetable</h3>
+                    <h3>Friday Scheduled Classes</h3>
                     <p class="dashboard-text">{{ fri_timetable }}</p>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
 </form>
