--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -15,7 +15,7 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Total Department</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
