--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -15,7 +15,7 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Total Timetable Sets</h3>
                     <p class="dashboard-text">{{ total_timetable }}</p>
                 </div>
