--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -16,7 +16,7 @@
             <!-- Overview -->
             <div class="dashboard-row">
                 <div class="dashboard-frame pie">
-                    <h3>Course by Department</h3>
+                    <h3>Courses by Department</h3>
                     <canvas id="courseDeptPieChart" width="200" height="200"></canvas>
                 </div>
                 <div class="dashboard-frame">
@@ -32,7 +32,7 @@
                     <p class="dashboard-text" style="color:red;">{{ courses_without_exams }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Incompleted Data Rows</h3>
+                    <h3>Incomplete Data Rows</h3>
                     <p class="dashboard-text" style="color:red;">{{ error_rows }}</p>
                 </div>
             </div>
