--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -15,32 +15,32 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame">
-                    <h3>Total Invigilation Report</h3>
+                <div class="dashboard-frame pie">
+                    <h3>Total Invigilation Reports</h3>
                     <p class="dashboard-text">{{ total_report }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator</h3>
+                    <h3>Total Assigned Invigilators</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_invigilator }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator CheckIn onTime</h3>
+                    <h3>Invigilators Checked In On Time</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_checkInOnTime }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator CheckOut onTime</h3>
+                    <h3>Invigilators Checked Out On Time</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_checkOutOnTime }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator CheckIn Late</h3>
+                    <h3>Invigilators Checked In Late</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkInLate }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator CheckOut Early</h3>
+                    <h3>Invigilators Checked Out Early</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkOutEarly }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Invigilator Haven't CheckInOut</h3>
+                    <h3>Invigilators Pending Check-In/Out</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_checkInOut }}</p>
                 </div>
             </div>
