--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -20,19 +20,19 @@
                     <canvas id="venueFloorPieChart" width="200" height="200"></canvas>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Total Venue</h3>
+                    <h3>Total Venues</h3>
                     <p class="dashboard-text">{{ total_venue }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Venue Available</h3>
+                    <h3>Available Venues</h3>
                     <p class="dashboard-text" style="color:green;">{{ available }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Venue Unavailable</h3>
+                    <h3>Unavailable Venues</h3>
                     <p class="dashboard-text" style="color:red;">{{ unavailable }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Venue In Service</h3>
+                    <h3>Venues Under Service</h3>
                     <p class="dashboard-text" style="color:rgb(99, 22, 114);">{{ in_service }}</p>
                 </div>
             </div>
