--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -16,23 +16,23 @@
             <!-- Overview -->
             <div class="dashboard-row">
                 <div class="dashboard-frame pie">
-                    <h3>Total Department</h3>
+                    <h3>Total Departments</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Department with HOP</h3>
+                    <h3>Departments with HOP</h3>
                     <p class="dashboard-text" style="color:green;">{{ department_with_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Department without HOP</h3>
+                    <h3>Departments without HOP</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_department - department_with_hop }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Department with Dean</h3>
+                    <h3>Departments with Dean</h3>
                     <p class="dashboard-text" style="color:green;">{{ department_with_dean }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Department without Dean</h3>
+                    <h3>Departments without Dean</h3>
                     <p class="dashboard-text" style="color:red;">{{ total_department - department_with_dean }}</p>
                 </div>
             </div>
