--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -9,9 +9,45 @@
 {% block dashboard_section %}
 <!-- Dashboard Form -->
 <form id="dashboardForm" action="{{ url_for('admin_manageInvigilationTimetable') }}" method="POST">
-    <div id="dashboardSection" class="function-frame">
+    <div id="dashboardSection" style="width: 90%; margin:auto;">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
+
+            <!-- Overview -->
+            <div class="dashboard-row">
+                <div class="dashboard-frame">
+                    <h3>Total Invigilation Reports</h3>
+                    <p class="dashboard-text">{{ total_report }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Total Assigned Invigilators</h3>
+                    <p class="dashboard-text" style="color:green;">{{ total_invigilator }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators In Progress</h3>
+                    <p class="dashboard-text" style="color:green;">{{ total_inProgress   }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators Pending Check-In/Out</h3>
+                    <p class="dashboard-text" style="color:red;">{{ total_checkInOut }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators Checked In On Time</h3>
+                    <p class="dashboard-text" style="color:green;">{{ total_checkInOnTime }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators Checked Out On Time</h3>
+                    <p class="dashboard-text" style="color:green;">{{ total_checkOutOnTime }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators Checked In Late</h3>
+                    <p class="dashboard-text" style="color:red;">{{ total_checkInLate }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Invigilators Checked Out Early</h3>
+                    <p class="dashboard-text" style="color:red;">{{ total_checkOutEarly }}</p>
+                </div>
+            </div>
         </div>
     </div>
 </form>
