--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -14,7 +14,7 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
+            <div class="dashboard-row">
                 <div class="dashboard-frame pie">
                     <h3>Venues by Floor</h3>
                     <canvas id="venueFloorPieChart" width="200" height="200"></canvas>
